--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:studio": "npx drizzle-kit studio",
     "db:push": "npx drizzle-kit push",
     "db:prod": "tsx ./scripts/prod.ts",
+    "db:seed": "tsx ./scripts/seed-dyslexia.ts",
     "db:test": "tsx ./scripts/test-db.ts",
     "validate-env": "node ./scripts/validate-env.js"
   },
@@ -61,9 +62,12 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.2.6",
     "@supabase/auth-ui-react": "^0.4.6",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.5.2",
@@ -85,7 +89,6 @@
     "react-dom": "^18",
     "react-use": "^17.5.0",
     "sonner": "^1.4.32",
-
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.2"
